deployment/local/example-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service
spec:
  selector:
    app: test-server
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
